Fixed vertical alignment for start-page link in the sidebar.

--- a/app/assets/stylesheets/partials/_sidebar.scss
+++ b/app/assets/stylesheets/partials/_sidebar.scss
@@ -47,8 +47,8 @@
 
     #start-page {
       padding: {
-        top: 5px;
-        bottom: 5px;
+        top: 6px;
+        bottom: 8px;
       }
     }
   }
